// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExerciseQuestion matches snapshot 1`] = `
<div
  data-test-id="student-exercise-question"
>
  <div
    className="sc-bczRLJ bKRYCW openstax-question step-card-body"
    data-question-number={1}
    data-test-id="question"
  >
    <div
      className="question-stem"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Is this a question?",
        }
      }
      data-question-number={1}
    />
    <span>
      FreeResponseReview @TODO
    </span>
    <div
      className="answers-table"
    >
      <div
        className="openstax-answer"
      >
        <section
          className="answers-answer disabled"
          role="region"
        >
          <input
            checked={false}
            className="answer-input-box"
            disabled={true}
            id="1-option-0"
            name="1-options"
            onChange={[Function]}
            type="radio"
          />
          <label
            className="answer-label"
            htmlFor="1-option-0"
          >
            <span
              className="answer-letter-wrapper"
            >
              <button
                aria-label="Choice a:"
                className="answer-letter"
                data-test-id="answer-choice-a"
                disabled={true}
                onClick={[Function]}
              >
                a
              </button>
            </span>
            <div
              className="answer-answer"
            >
              <span
                className="answer-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "True",
                  }
                }
              />
            </div>
          </label>
        </section>
      </div>
      <div
        className="openstax-answer"
      >
        <section
          className="answers-answer disabled"
          role="region"
        >
          <input
            checked={false}
            className="answer-input-box"
            disabled={true}
            id="1-option-1"
            name="1-options"
            onChange={[Function]}
            type="radio"
          />
          <label
            className="answer-label"
            htmlFor="1-option-1"
          >
            <span
              className="answer-letter-wrapper"
            >
              <button
                aria-label="Choice b:"
                className="answer-letter"
                data-test-id="answer-choice-b"
                disabled={true}
                onClick={[Function]}
              >
                b
              </button>
            </span>
            <div
              className="answer-answer"
            >
              <span
                className="answer-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "False",
                  }
                }
              />
            </div>
          </label>
        </section>
      </div>
    </div>
  </div>
  <div
    className="sc-gsnTZi cfqehf"
  >
    <div
      className="points"
    >
      <strong>
        Points: 
      </strong>
      <span
        className="attempts-left"
      />
    </div>
    <div
      className="controls"
    >
      <button
        className="sc-dkzDqf fVVaSh"
        data-test-id="continue-btn"
        onClick={[Function]}
      >
        Next
      </button>
    </div>
  </div>
</div>
`;

exports[`ExerciseQuestion renders Re-submit button 1`] = `
<div
  data-test-id="student-exercise-question"
>
  <div
    className="sc-bczRLJ bKRYCW openstax-question step-card-body has-incorrect-answer"
    data-question-number={1}
    data-test-id="question"
  >
    <div
      className="question-stem"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Is this a question?",
        }
      }
      data-question-number={1}
    />
    <span>
      FreeResponseReview @TODO
    </span>
    <div
      className="answers-table"
    >
      <div
        className="openstax-answer"
      >
        <section
          className="answers-answer"
          role="region"
        >
          <input
            checked={false}
            className="answer-input-box"
            disabled={false}
            id="1-option-0"
            name="1-options"
            onChange={[Function]}
            type="radio"
          />
          <label
            className="answer-label"
            htmlFor="1-option-0"
          >
            <span
              className="answer-letter-wrapper"
            >
              <button
                aria-label="Choice a:"
                className="answer-letter"
                data-test-id="answer-choice-a"
                disabled={false}
                onClick={[Function]}
              >
                a
              </button>
            </span>
            <div
              className="answer-answer"
            >
              <span
                className="answer-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "True",
                  }
                }
              />
            </div>
          </label>
        </section>
      </div>
      <div
        className="openstax-answer"
      >
        <section
          className="answers-answer answer-incorrect"
          role="region"
        >
          <input
            checked={false}
            className="answer-input-box"
            disabled={false}
            id="1-option-1"
            name="1-options"
            onChange={[Function]}
            type="radio"
          />
          <label
            className="answer-label"
            htmlFor="1-option-1"
          >
            <span
              className="answer-letter-wrapper"
            >
              <button
                aria-label="Choice b:"
                className="answer-letter"
                data-test-id="answer-choice-b"
                disabled={true}
                onClick={[Function]}
              >
                b
              </button>
            </span>
            <div
              className="answer-answer"
            >
              <span
                className="answer-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "False",
                  }
                }
              />
            </div>
          </label>
        </section>
      </div>
    </div>
  </div>
  <div
    className="sc-gsnTZi cfqehf"
  >
    <div
      className="points"
    >
      <strong>
        Points: 
      </strong>
      <span
        className="attempts-left"
      />
    </div>
    <div
      className="controls"
    >
      <button
        className="sc-dkzDqf fVVaSh"
      >
        Re-submit
      </button>
    </div>
  </div>
</div>
`;

exports[`ExerciseQuestion renders Save button 1`] = `
<div
  data-test-id="student-exercise-question"
>
  <div
    className="sc-bczRLJ bKRYCW openstax-question step-card-body has-incorrect-answer"
    data-question-number={1}
    data-test-id="question"
  >
    <div
      className="question-stem"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Is this a question?",
        }
      }
      data-question-number={1}
    />
    <span>
      FreeResponseReview @TODO
    </span>
    <div
      className="answers-table"
    >
      <div
        className="openstax-answer"
      >
        <section
          className="answers-answer"
          role="region"
        >
          <input
            checked={false}
            className="answer-input-box"
            disabled={false}
            id="1-option-0"
            name="1-options"
            onChange={[Function]}
            type="radio"
          />
          <label
            className="answer-label"
            htmlFor="1-option-0"
          >
            <span
              className="answer-letter-wrapper"
            >
              <button
                aria-label="Choice a:"
                className="answer-letter"
                data-test-id="answer-choice-a"
                disabled={false}
                onClick={[Function]}
              >
                a
              </button>
            </span>
            <div
              className="answer-answer"
            >
              <span
                className="answer-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "True",
                  }
                }
              />
            </div>
          </label>
        </section>
      </div>
      <div
        className="openstax-answer"
      >
        <section
          className="answers-answer answer-incorrect"
          role="region"
        >
          <input
            checked={false}
            className="answer-input-box"
            disabled={false}
            id="1-option-1"
            name="1-options"
            onChange={[Function]}
            type="radio"
          />
          <label
            className="answer-label"
            htmlFor="1-option-1"
          >
            <span
              className="answer-letter-wrapper"
            >
              <button
                aria-label="Choice b:"
                className="answer-letter"
                data-test-id="answer-choice-b"
                disabled={true}
                onClick={[Function]}
              >
                b
              </button>
            </span>
            <div
              className="answer-answer"
            >
              <span
                className="answer-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "False",
                  }
                }
              />
            </div>
          </label>
        </section>
      </div>
    </div>
  </div>
  <div
    className="sc-gsnTZi cfqehf"
  >
    <div
      className="points"
    >
      <strong>
        Points: 
      </strong>
      <span
        className="attempts-left"
      />
    </div>
    <div
      className="controls"
    >
      <button
        className="sc-dkzDqf fVVaSh"
      >
        Submit
      </button>
    </div>
  </div>
</div>
`;

exports[`ExerciseQuestion renders all attempts remaining 1`] = `
<div
  data-test-id="student-exercise-question"
>
  <div
    className="sc-bczRLJ bKRYCW openstax-question step-card-body"
    data-question-number={1}
    data-test-id="question"
  >
    <div
      className="question-stem"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Is this a question?",
        }
      }
      data-question-number={1}
    />
    <span>
      FreeResponseReview @TODO
    </span>
    <div
      className="answers-table"
    >
      <div
        className="openstax-answer"
      >
        <section
          className="answers-answer"
          role="region"
        >
          <input
            checked={false}
            className="answer-input-box"
            disabled={false}
            id="1-option-0"
            name="1-options"
            onChange={[Function]}
            type="radio"
          />
          <label
            className="answer-label"
            htmlFor="1-option-0"
          >
            <span
              className="answer-letter-wrapper"
            >
              <button
                aria-label="Choice a:"
                className="answer-letter"
                data-test-id="answer-choice-a"
                disabled={false}
                onClick={[Function]}
              >
                a
              </button>
            </span>
            <div
              className="answer-answer"
            >
              <span
                className="answer-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "True",
                  }
                }
              />
            </div>
          </label>
        </section>
      </div>
      <div
        className="openstax-answer"
      >
        <section
          className="answers-answer"
          role="region"
        >
          <input
            checked={false}
            className="answer-input-box"
            disabled={false}
            id="1-option-1"
            name="1-options"
            onChange={[Function]}
            type="radio"
          />
          <label
            className="answer-label"
            htmlFor="1-option-1"
          >
            <span
              className="answer-letter-wrapper"
            >
              <button
                aria-label="Choice b:"
                className="answer-letter"
                data-test-id="answer-choice-b"
                disabled={false}
                onClick={[Function]}
              >
                b
              </button>
            </span>
            <div
              className="answer-answer"
            >
              <span
                className="answer-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "False",
                  }
                }
              />
            </div>
          </label>
        </section>
      </div>
    </div>
  </div>
  <div
    className="sc-gsnTZi cfqehf"
  >
    <div
      className="points"
    >
      <strong>
        Points: 
      </strong>
      <span
        className="attempts-left"
      >
        <div>
          2
           attempt
          s
           left
        </div>
      </span>
    </div>
    <div
      className="controls"
    >
      <button
        className="sc-dkzDqf fVVaSh"
        data-test-id="continue-btn"
        onClick={[Function]}
      >
        Next
      </button>
    </div>
  </div>
</div>
`;

exports[`ExerciseQuestion renders continue button (unused?) 1`] = `
<div
  data-test-id="student-exercise-question"
>
  <div
    className="sc-bczRLJ bKRYCW openstax-question step-card-body has-incorrect-answer"
    data-question-number={1}
    data-test-id="question"
  >
    <div
      className="question-stem"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Is this a question?",
        }
      }
      data-question-number={1}
    />
    <span>
      FreeResponseReview @TODO
    </span>
    <div
      className="answers-table"
    >
      <div
        className="openstax-answer"
      >
        <section
          className="answers-answer disabled"
          role="region"
        >
          <input
            checked={false}
            className="answer-input-box"
            disabled={true}
            id="1-option-0"
            name="1-options"
            onChange={[Function]}
            type="radio"
          />
          <label
            className="answer-label"
            htmlFor="1-option-0"
          >
            <span
              className="answer-letter-wrapper"
            >
              <button
                aria-label="Choice a:"
                className="answer-letter"
                data-test-id="answer-choice-a"
                disabled={true}
                onClick={[Function]}
              >
                a
              </button>
            </span>
            <div
              className="answer-answer"
            >
              <span
                className="answer-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "True",
                  }
                }
              />
            </div>
          </label>
        </section>
      </div>
      <div
        className="openstax-answer"
      >
        <section
          className="answers-answer disabled answer-incorrect"
          role="region"
        >
          <input
            checked={false}
            className="answer-input-box"
            disabled={true}
            id="1-option-1"
            name="1-options"
            onChange={[Function]}
            type="radio"
          />
          <label
            className="answer-label"
            htmlFor="1-option-1"
          >
            <span
              className="answer-letter-wrapper"
            >
              <button
                aria-label="Choice b:"
                className="answer-letter"
                data-test-id="answer-choice-b"
                disabled={true}
                onClick={[Function]}
              >
                b
              </button>
            </span>
            <div
              className="answer-answer"
            >
              <span
                className="answer-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "False",
                  }
                }
              />
            </div>
          </label>
        </section>
      </div>
    </div>
  </div>
  <div
    className="sc-gsnTZi cfqehf"
  >
    <div
      className="points"
    >
      <strong>
        Points: 
      </strong>
      <span
        className="attempts-left"
      />
    </div>
    <div
      className="controls"
    >
      <button
        className="sc-dkzDqf fVVaSh"
        data-test-id="continue-btn"
        onClick={[Function]}
      >
        Continue
      </button>
    </div>
  </div>
</div>
`;

exports[`ExerciseQuestion renders detailed solution and published comments 1`] = `
<div
  data-test-id="student-exercise-question"
>
  <div
    className="sc-bczRLJ bKRYCW openstax-question step-card-body has-correct-answer has-incorrect-answer"
    data-question-number={1}
    data-test-id="question"
  >
    <div
      className="question-stem"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Is this a question?",
        }
      }
      data-question-number={1}
    />
    <span>
      FreeResponseReview @TODO
    </span>
    <div
      className="answers-table"
    >
      <div
        className="openstax-answer"
      >
        <section
          className="answers-answer disabled answer-correct"
          role="region"
        >
          <label
            className="answer-label"
            htmlFor="1-option-0"
          >
            <span
              className="answer-letter-wrapper"
            >
              <button
                aria-label="Choice a(Correct Answer):"
                className="answer-letter"
                data-test-id="answer-choice-a"
                disabled={true}
              >
                a
              </button>
            </span>
            <div
              className="answer-answer"
            >
              <span
                className="answer-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "True",
                  }
                }
              />
            </div>
          </label>
        </section>
      </div>
      <div
        className="openstax-answer"
      >
        <section
          className="answers-answer disabled answer-incorrect"
          role="region"
        >
          <label
            className="answer-label"
            htmlFor="1-option-1"
          >
            <span
              className="answer-letter-wrapper"
            >
              <button
                aria-label="Choice b(Incorrect Answer):"
                className="answer-letter"
                data-test-id="answer-choice-b"
                disabled={true}
              >
                b
              </button>
            </span>
            <div
              className="answer-answer"
            >
              <span
                className="answer-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "False",
                  }
                }
              />
            </div>
          </label>
        </section>
      </div>
    </div>
  </div>
  <div
    className="sc-gsnTZi cfqehf"
  >
    <div
      className="points"
    >
      <strong>
        Points: 
      </strong>
      <span
        className="attempts-left"
      />
      <div>
        <strong>
          Feedback:
        </strong>
         
        Teacher feedback
      </div>
      <div>
        <strong>
          Detailed solution:
        </strong>
         
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "A detailed solution",
            }
          }
        />
      </div>
    </div>
    <div
      className="controls"
    >
      <button
        className="sc-dkzDqf fVVaSh"
        data-test-id="continue-btn"
        onClick={[Function]}
      >
        Next
      </button>
    </div>
  </div>
</div>
`;

exports[`ExerciseQuestion renders no attempts remaining 1`] = `
<div
  data-test-id="student-exercise-question"
>
  <div
    className="sc-bczRLJ bKRYCW openstax-question step-card-body has-incorrect-answer"
    data-question-number={1}
    data-test-id="question"
  >
    <div
      className="question-stem"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Is this a question?",
        }
      }
      data-question-number={1}
    />
    <span>
      FreeResponseReview @TODO
    </span>
    <div
      className="answers-table"
    >
      <div
        className="openstax-answer"
      >
        <section
          className="answers-answer disabled"
          role="region"
        >
          <input
            checked={false}
            className="answer-input-box"
            disabled={true}
            id="1-option-0"
            name="1-options"
            onChange={[Function]}
            type="radio"
          />
          <label
            className="answer-label"
            htmlFor="1-option-0"
          >
            <span
              className="answer-letter-wrapper"
            >
              <button
                aria-label="Choice a:"
                className="answer-letter"
                data-test-id="answer-choice-a"
                disabled={true}
                onClick={[Function]}
              >
                a
              </button>
            </span>
            <div
              className="answer-answer"
            >
              <span
                className="answer-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "True",
                  }
                }
              />
            </div>
          </label>
        </section>
      </div>
      <div
        className="openstax-answer"
      >
        <section
          className="answers-answer disabled answer-incorrect"
          role="region"
        >
          <input
            checked={false}
            className="answer-input-box"
            disabled={true}
            id="1-option-1"
            name="1-options"
            onChange={[Function]}
            type="radio"
          />
          <label
            className="answer-label"
            htmlFor="1-option-1"
          >
            <span
              className="answer-letter-wrapper"
            >
              <button
                aria-label="Choice b:"
                className="answer-letter"
                data-test-id="answer-choice-b"
                disabled={true}
                onClick={[Function]}
              >
                b
              </button>
            </span>
            <div
              className="answer-answer"
            >
              <span
                className="answer-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "False",
                  }
                }
              />
            </div>
          </label>
        </section>
      </div>
    </div>
  </div>
  <div
    className="sc-gsnTZi cfqehf"
  >
    <div
      className="points"
    >
      <strong>
        Points: 
      </strong>
      <span
        className="attempts-left"
      />
    </div>
    <div
      className="controls"
    >
      <button
        className="sc-dkzDqf fVVaSh"
        data-test-id="continue-btn"
        onClick={[Function]}
      >
        Next
      </button>
    </div>
  </div>
</div>
`;

exports[`ExerciseQuestion renders some attempts remaining 1`] = `
<div
  data-test-id="student-exercise-question"
>
  <div
    className="sc-bczRLJ bKRYCW openstax-question step-card-body has-incorrect-answer"
    data-question-number={1}
    data-test-id="question"
  >
    <div
      className="question-stem"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Is this a question?",
        }
      }
      data-question-number={1}
    />
    <span>
      FreeResponseReview @TODO
    </span>
    <div
      className="answers-table"
    >
      <div
        className="openstax-answer"
      >
        <section
          className="answers-answer"
          role="region"
        >
          <input
            checked={false}
            className="answer-input-box"
            disabled={false}
            id="1-option-0"
            name="1-options"
            onChange={[Function]}
            type="radio"
          />
          <label
            className="answer-label"
            htmlFor="1-option-0"
          >
            <span
              className="answer-letter-wrapper"
            >
              <button
                aria-label="Choice a:"
                className="answer-letter"
                data-test-id="answer-choice-a"
                disabled={false}
                onClick={[Function]}
              >
                a
              </button>
            </span>
            <div
              className="answer-answer"
            >
              <span
                className="answer-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "True",
                  }
                }
              />
            </div>
          </label>
        </section>
      </div>
      <div
        className="openstax-answer"
      >
        <section
          className="answers-answer answer-incorrect"
          role="region"
        >
          <input
            checked={false}
            className="answer-input-box"
            disabled={false}
            id="1-option-1"
            name="1-options"
            onChange={[Function]}
            type="radio"
          />
          <label
            className="answer-label"
            htmlFor="1-option-1"
          >
            <span
              className="answer-letter-wrapper"
            >
              <button
                aria-label="Choice b:"
                className="answer-letter"
                data-test-id="answer-choice-b"
                disabled={true}
                onClick={[Function]}
              >
                b
              </button>
            </span>
            <div
              className="answer-answer"
            >
              <span
                className="answer-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "False",
                  }
                }
              />
            </div>
          </label>
        </section>
      </div>
    </div>
  </div>
  <div
    className="sc-gsnTZi cfqehf"
  >
    <div
      className="points"
    >
      <strong>
        Points: 
      </strong>
      <span
        className="attempts-left"
      >
        <div>
          1
           attempt
           left
        </div>
      </span>
    </div>
    <div
      className="controls"
    >
      <button
        className="sc-dkzDqf fVVaSh"
        data-test-id="continue-btn"
        onClick={[Function]}
      >
        Next
      </button>
    </div>
  </div>
</div>
`;
